--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
-    background-color: aqua;
+    font-family: sans-serif;
+    background-color: lightcoral;   
+}
+
+.container {
+    width: 80%;
+    margin: 3rem auto;
+    text-align: center;
 }
